# cardinalsin

./: .dockerignore  .env.development  .env.production  .env.staging  .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.beads/: issues.jsonl
.githooks/: pre-commit
.github/scripts/: sync-beads-closures.sh
.github/workflows/: ci.yml  docker-publish.yml  sync-beads-closures.yml  telemetry-overhead.yml
.playwright-cli/: page-2026-02-25T03-38-23-545Z.yml  page-2026-02-25T03-38-34-735Z.yml  page-2026-02-25T03-38-48-983Z.yml  page-2026-02-25T03-39-05-417Z.yml  page-2026-02-25T03-39-18-868Z.yml
benches/: query_latency.rs  write_throughput.rs
benchmarks/results/run-20260226T213355Z-e2e/: summary.json
deploy/: Dockerfile  docker-compose.yml
deploy/grafana/provisioning/dashboards/: compactor-metadata-health.json  dashboards.yaml  ingest-health.json  query-performance.json  run-overview.json
deploy/grafana/provisioning/datasources/: cardinalsin.yaml  prometheus-baseline.yaml
deploy/kubernetes/: compactor.yaml  ingester.yaml  otel-collector.yaml  query.yaml
deploy/otel-collector/: README.md  config.yaml
docs/: architecture-audit.md  benchmark-improvement-plan.md  code-quality-audit.md  design-compaction-leasing.md  design-indexing-next-evolution.md  design-indexing.md  design-metadata-merge.md  design-wal.md  observability-dogfooding-runbook.md  tsdb-research-findings.md  wal-audit.md
docs/telemetry/: metric-catalog.md  mixed-workload-runner.md  overhead-baseline.json  query-pack.md
scripts/: install-git-hooks.sh
scripts/telemetry/: check_overhead_budget.sh  compare_dual_publish.sh  run_mixed_workload.sh  run_query_pack.sh
scripts/telemetry/query-pack/: live.promql  live.sql  postrun.promql  postrun.sql
src/: clock.rs  config.rs  error.rs  lib.rs  rate_limit.rs  telemetry.rs
src/adaptive_index/: column_promoter.rs  lifecycle.rs  mod.rs  recommender.rs  stats_collector.rs
src/api/: grpc.rs  mod.rs  telemetry.rs
src/api/ingest/: flight_ingest.rs  mod.rs  otlp.rs  prometheus.rs
src/api/query/: flight_sql.rs  mod.rs  prometheus_api.rs  sql_http.rs  streaming.rs
src/cluster/: mod.rs  node_registry.rs  query_router.rs  shard_assignment.rs  write_router.rs
src/compactor/: levels.rs  merge.rs  mod.rs  pins.rs
src/index/: inverted.rs
src/ingester/: broadcast.rs  buffer.rs  mod.rs  parquet_writer.rs  telemetry.rs  topic_broadcast.rs  wal.rs
src/metadata/: client.rs  local.rs  mod.rs  predicates.rs  s3.rs
src/query/: cache.rs  cached_store.rs  dedup.rs  engine.rs  mod.rs  router.rs  streaming.rs  telemetry.rs
src/schema/: metrics.rs  mod.rs
src/sharding/: mod.rs  monitor.rs  rebalancer.rs  router.rs  splitter.rs
tests/: adaptive_indexing_tests.rs  atomic_metadata_tests.rs  cluster_tests.rs  compaction_lease_tests.rs  coverage_gap_tests.rs  e2e_smoke.rs  end_to_end_tests.rs  error_path_tests.rs  generation_cas_tests.rs  level_tracking_tests.rs  predicate_pushdown_tests.rs  query_node_query_tests.rs  shard_split_tests.rs  sharding_orchestration_test.rs  telemetry_contract_tests.rs  topic_broadcast_tests.rs  wal_integration_tests.rs
tests/e2e/: harness.rs  mod.rs
tests/e2e/smoke/: health_tests.rs  mod.rs  prometheus_api_tests.rs  protocol_tests.rs  roundtrip_tests.rs
tests/integration/: mod.rs  write_read_test.rs
